# monotone-frameworks-rs

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
lattice/: Cargo.toml
lattice/src/: lib.rs
lattice_sign/: Cargo.toml
lattice_sign/src/: lib.rs
monotone-framework/: Cargo.toml
monotone-framework/examples/: taint.rs
monotone-framework/src/: lib.rs
src/: frameworks.rs  lattice.rs  lib.rs
