[package]
name = "monotone-frameworks"
version = "0.1.0"
authors = ["Hilmar Gústafsson <LiHRaM@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lattice = { path = "../lattice" }